--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
 		<swagger-codegen.package>${project.groupId}</swagger-codegen.package>
 		<swagger-codegen.skip.server>false</swagger-codegen.skip.server>
 		<swagger-codegen.skip.client>true</swagger-codegen.skip.client>
+		<spring-javaformat-maven-plugin.version>0.0.23</spring-javaformat-maven-plugin.version>
+		<maven-checkstyle-plugin.version>3.1.1</maven-checkstyle-plugin.version>
 		
 		<!-- Fails the build upon Checkstyle errors -->
 		<maven-checkstyle-plugin.failsOnError>true</maven-checkstyle-plugin.failsOnError>
@@ -29,9 +31,12 @@
         <maven-checkstyle-plugin.includeTestSourceDirectory>true</maven-checkstyle-plugin.includeTestSourceDirectory> 
 		
 	</properties>
+	
+
 
 
 	<dependencies>
+
 	
 	    <dependency>
 	      <groupId>org.springframework.boot</groupId>
@@ -114,10 +119,48 @@
             <plugin> 
                 <groupId>io.spring.javaformat</groupId>
                 <artifactId>spring-javaformat-maven-plugin</artifactId>
+                <version>${spring-javaformat-maven-plugin.version}</version>
+				<executions>
+					<execution>
+						<phase>validate</phase>
+						<inherited>true</inherited>
+						<goals>
+							<goal>validate</goal>
+						</goals>
+					</execution>
+				</executions>
             </plugin>
             <plugin> 
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>${maven-checkstyle-plugin.version}</version>
+				<dependencies>
+					<dependency>
+						<groupId>com.puppycrawl.tools</groupId>
+						<artifactId>checkstyle</artifactId>
+						<version>8.35</version>
+					</dependency>
+					<dependency>
+						<groupId>io.spring.javaformat</groupId>
+						<artifactId>spring-javaformat-checkstyle</artifactId>
+						<version>${spring-javaformat-maven-plugin.version}</version>
+					</dependency>
+				</dependencies>
+				<executions>
+					<execution>
+						<id>checkstyle-validation</id>
+						<phase>validate</phase>
+						<inherited>true</inherited>
+						<configuration>
+							<configLocation>io/spring/javaformat/checkstyle/checkstyle.xml</configLocation>
+							<includeTestSourceDirectory>true</includeTestSourceDirectory>
+							<failOnViolation>false</failOnViolation>
+						</configuration>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
             </plugin>	
 			
 		</plugins>
