--- a/src/main/resources/bootstrap.yaml
+++ b/src/main/resources/bootstrap.yaml
@@ -1,10 +1,13 @@
+debug: true # Enable debug logs.
+trace: false # Enable trace logs.
+
 spring:
   application:
     name: example-app-11
     
   cloud:
     kubernetes:
-      enabled: false
+      enabled: true
       reload:
         enabled: true
         #refresh: only @ConfigurationProperties or @RefreshScope
@@ -45,3 +48,15 @@ spring:
   cloud:
     kubernetes:
         enabled: true
+        
+debug: true # Enable debug logs.
+trace: false # Enable trace logs.
+---
+spring:
+  profiles: devops #Profile para deshabilitar kubernetes
+  cloud:
+    kubernetes:
+        enabled: false
+        
+debug: true # Enable debug logs.
+trace: false # Enable trace logs.
