bootstrap.yaml edited online with Bitbucket

--- a/src/main/resources/bootstrap.yaml
+++ b/src/main/resources/bootstrap.yaml
@@ -15,7 +15,7 @@ spring:
         #shutdown: full restart; not recomended
         strategy: refresh
         monitoring-config-maps: true
-        monitoring-secrets: true
+        monitoring-secrets: false
       config:
         name: ${spring.application.name}
         #namespace: juan
