application.yml edited online with Bitbucket

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,7 +26,8 @@ server:
           
 
 spring:
-  mvc: log-request-details: true # Whether logging of (potentially sensitive) request details at DEBUG and TRACE level is allowed.
+  mvc: 
+  	log-request-details: true # Whether logging of (potentially sensitive) request details at DEBUG and TRACE level is allowed.
   output:
     ansi:
       enabled: detect
