--- a/src/main/resources/bootstrap.yaml
+++ b/src/main/resources/bootstrap.yaml
@@ -45,7 +45,7 @@ logging:
 ---
 spring:
   profiles: kubernetes #Profile habilitado de forma automatica cuando se despliega en OCP
-  mandatory-file-encoding: UTF-8
+#  mandatory-file-encoding: UTF-8
   cloud:
     kubernetes:
         enabled: true
@@ -55,7 +55,7 @@ trace: false # Enable trace logs.
 ---
 spring:
   profiles: devops #Profile para deshabilitar kubernetes
-  mandatory-file-encoding: UTF-8
+#  mandatory-file-encoding: UTF-8
   cloud:
     kubernetes:
         enabled: false
