--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
 			<groupId>com.santalucia.arq.ams</groupId>
 			<artifactId>ams-componentes-exceptions</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.santalucia.arq.ams</groupId>
+			<artifactId>ams-componentes-tracing</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
