--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
 		<dependency>
 			<groupId>com.santalucia.arq.ams</groupId>
 			<artifactId>ams-componentes-tracing</artifactId>
+			<version>2.0.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
