--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,11 @@
 	    
 		<dependency>
 		    <groupId>org.springframework.cloud</groupId>
-		    <artifactId>spring-cloud-starter-kubernetes-all</artifactId>
+		    <artifactId>spring-cloud-starter-kubernetes</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-kubernetes-config</artifactId>
 		</dependency>
 	
 		<dependency>
@@ -148,6 +152,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<fork>false</fork>
+				</configuration>
 			</plugin>
 			
 			
