chore: enable UTF-8 check for devops

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -54,7 +54,7 @@ trace: false # Enable trace logs.
 ---
 spring:
   profiles: devops #Profile para deshabilitar kubernetes
-#  mandatory-file-encoding: UTF-8
+  mandatory-file-encoding: UTF-8
   cloud:
     kubernetes:
         enabled: false
