--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!-- mapstruct -->
+		<!-- mapstruct TODO: REVISAR SI ES NECESARIO EN MODO RUNTIME/ PROVIDED--> 
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
