--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.santalucia.arq.ams</groupId>
-		<artifactId>ams-parent-sl</artifactId>
-		<version>0.0.3-SNAPSHOT</version>
+		<artifactId>ams-parent-sw</artifactId>
+		<version>0.0.5-SNAPSHOT</version>
 	</parent>
 	<groupId>com.santalucia.example</groupId>
 	<artifactId>example-app</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<name>example-app</name>
 	<description>Demo project for Spring Boot</description>
 	
@@ -18,22 +18,13 @@
 		<swagger-codegen.inputSpec>src/main/resources/definition-yaml/swagger.yaml</swagger-codegen.inputSpec>
 		<swagger-codegen.package>${project.groupId}</swagger-codegen.package>
 		<swagger-codegen.skip.server>false</swagger-codegen.skip.server>
-		<swagger-codegen.skip.client>true</swagger-codegen.skip.client>
-		<spring-javaformat-maven-plugin.version>0.0.23</spring-javaformat-maven-plugin.version>
-		<maven-checkstyle-plugin.version>3.1.1</maven-checkstyle-plugin.version>
-		
-		<!-- Fails the build upon Checkstyle errors -->
-		<maven-checkstyle-plugin.failsOnError>true</maven-checkstyle-plugin.failsOnError>
-		<!-- Fails the build upon Checkstyle violations -->
-        <maven-checkstyle-plugin.failsOnViolation>true</maven-checkstyle-plugin.failsOnViolation> 
-		<!-- Checkstyle analyzes also the test sources -->
-        <maven-checkstyle-plugin.includeTestSourceDirectory>true</maven-checkstyle-plugin.includeTestSourceDirectory> 
-		
+		<swagger-codegen.skip.client>false</swagger-codegen.skip.client>
+	
 	</properties>
 	
 	<dependencies>
-
 	
+		
 	    <dependency>
 	      <groupId>org.springframework.boot</groupId>
 	      <artifactId>spring-boot-devtools</artifactId>
@@ -41,15 +32,7 @@
 	      <optional>true</optional>
 	    </dependency>
 	    
-		<dependency>
-		    <groupId>org.springframework.cloud</groupId>
-		    <artifactId>spring-cloud-starter-kubernetes</artifactId>
-		</dependency>
-		<dependency>
-		    <groupId>org.springframework.cloud</groupId>
-		    <artifactId>spring-cloud-starter-kubernetes-config</artifactId>
-		</dependency>
-	
+
 		<dependency>
 			<groupId>com.santalucia.arq.ams</groupId>
 			<artifactId>ams-componentes-web</artifactId>
@@ -91,7 +74,6 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!-- mapstruct TODO: REVISAR SI ES NECESARIO EN MODO RUNTIME/ PROVIDED--> 
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
@@ -136,68 +118,8 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			
-			
-			<!-- Add the Spring Java Format plugin that will reformat your code -->
-			<!-- to pass most of the Checkstyle formatting rule -->
-            <plugin> 
-                <groupId>io.spring.javaformat</groupId>
-                <artifactId>spring-javaformat-maven-plugin</artifactId>
-                <version>${spring-javaformat-maven-plugin.version}</version>
-				<executions>
-					<execution>
-						<phase>validate</phase>
-						<inherited>true</inherited>
-						<goals>
-							<goal>validate</goal>
-						</goals>
-					</execution>
-				</executions>
-            </plugin>
-            <plugin> 
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>${maven-checkstyle-plugin.version}</version>
-				<dependencies>
-					<dependency>
-						<groupId>com.puppycrawl.tools</groupId>
-						<artifactId>checkstyle</artifactId>
-						<version>8.35</version>
-					</dependency>
-					<dependency>
-						<groupId>io.spring.javaformat</groupId>
-						<artifactId>spring-javaformat-checkstyle</artifactId>
-						<version>${spring-javaformat-maven-plugin.version}</version>
-					</dependency>
-				</dependencies>
-				<executions>
-					<execution>
-						<id>checkstyle-validation</id>
-						<phase>validate</phase>
-						<inherited>true</inherited>
-						<configuration>
-							<configLocation>io/spring/javaformat/checkstyle/checkstyle.xml</configLocation>
-							<includeTestSourceDirectory>true</includeTestSourceDirectory>
-							<failOnViolation>false</failOnViolation>
-						</configuration>
-						<goals>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
-            </plugin>	
-			
 		</plugins>
 		
 	</build>
-    <reporting>
-        <plugins>
-            <plugin> 
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </reporting>
-
 
 </project>
