--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.santalucia.arq.ams</groupId>
-		<artifactId>ams-parent-sw</artifactId>
+		<artifactId>ams-parent-sl-sw</artifactId>
 		<version>0.0.5-SNAPSHOT</version>
 	</parent>
 	<groupId>com.santalucia.example</groupId>
@@ -24,14 +24,12 @@
 	
 	<dependencies>
 	
-		
 	    <dependency>
 	      <groupId>org.springframework.boot</groupId>
 	      <artifactId>spring-boot-devtools</artifactId>
 	      <scope>runtime</scope>
 	      <optional>true</optional>
 	    </dependency>
-	    
 
 		<dependency>
 			<groupId>com.santalucia.arq.ams</groupId>
@@ -45,12 +43,7 @@
 		
 		<dependency>
 			<groupId>com.santalucia.arq.ams</groupId>
-			<artifactId>ams-componentes-logging</artifactId>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.santalucia.arq.ams</groupId>
-			<artifactId>ams-componentes-monitoring</artifactId>
+			<artifactId>ams-starter-observability</artifactId>
 		</dependency>
 		
 		<dependency>
@@ -63,11 +56,6 @@
 			<artifactId>ams-componentes-database</artifactId>
 		</dependency>
 		
-		<dependency>
-			<groupId>com.santalucia.arq.ams</groupId>
-			<artifactId>ams-componentes-tracing</artifactId>
-		</dependency>
-
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -90,6 +78,20 @@
  			<artifactId>spring-boot-starter-test</artifactId>
  			<scope>test</scope>
  		</dependency> 
+ 		
+		<dependency>
+		    <groupId>org.mybatis.spring.boot</groupId>
+		    <artifactId>mybatis-spring-boot-starter-test</artifactId>
+		    <version>2.1.4</version>
+		    <scope>test</scope>
+		</dependency>
+ 		
+		 <!-- Needed for custom yaml tags -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 				
 		 <!-- IBM Informix JDBC Driver -->
         <dependency>
@@ -108,6 +110,13 @@
 		<dependency>
 			<groupId>com.oracle.ojdbc</groupId>
 			<artifactId>ucp</artifactId>
+		</dependency>
+		
+		
+		<dependency>
+		    <groupId>com.h2database</groupId>
+		    <artifactId>h2</artifactId>
+		    <scope>test</scope>
 		</dependency>
 
 	</dependencies>
