--- a/src/test/resources/application–test.yaml
+++ b/src/test/resources/application–test.yaml
@@ -7,6 +7,6 @@ spring:
       password: sa
     oracle:
       driverClassName: org.h2.Driver
-      url: jdbc:h2:mem:db-oracle;DB_CLOSE_DELAY=-1
+      url: jdbc:h2:mem:db-oracle;DB_CLOSE_DELAY=-1;MODE=Oracle
       username: sa
       password: sa
