--- a/pom.xml
+++ b/pom.xml
@@ -99,16 +99,19 @@
 			<artifactId>jdbc</artifactId>
 		</dependency>
 
+
+		<!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc8 -->
 		<dependency>
-			<groupId>com.oracle.ojdbc</groupId>
-			<artifactId>ojdbc8</artifactId>
+		    <groupId>com.oracle.database.jdbc</groupId>
+		    <artifactId>ojdbc11</artifactId>
 		</dependency>
+
 		<dependency>
-			<groupId>com.oracle.ojdbc</groupId>
+			<groupId>com.oracle.database.nls</groupId>
 			<artifactId>orai18n</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.oracle.ojdbc</groupId>
+			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ucp</artifactId>
 		</dependency>
 		
