--- a/src/test/resources/bootstrap.yaml
+++ b/src/test/resources/bootstrap.yaml
@@ -10,5 +10,5 @@ spring:
     kubernetes:
         enabled: false
         
-debug: false # Enable debug logs.
+debug: true # Enable debug logs.
 trace: false # Enable trace logs.
